@@ -105,6 +105,7 @@
 			<input name="q" value="{$q|escape}" type="hidden">
 			<input class="btn save" type="submit" value="<#Save#>">
 			<input name="cancel" class="btn cancel" type="submit" value="<#Cancel#>">
+			<input name="reset" class="btn cancel" type="submit" value="<#Reset Last Update Time#>">
 {if $advanced_config}
 			<input name="new" class="btn new" type="submit" value="<#New Variable#>">
 {/if}
