@@ -391,7 +391,8 @@ div.ps-theme-install {
 	width: 90%;
 	margin: 0 auto 1em; 
 }
-div.ps-theme-install p.small {
+div.ps-theme-install p.small,
+span.small {
 	font-size: 0.8em;
 	color: gray;
 }
