@@ -98,7 +98,7 @@ INSERT INTO `psss_config` (`id`, `conftype`, `section`, `var`, `value`, `label`,
             </div>',
             'Site Privacy Policy','textarea',0,'','','This is the Privacy Policy for PsychoStats.  It uses html formatting.'),
         (2800,'main','security','enable_cookieconsent','1','Enable Cookie Consent?','boolean',0,'','','This enables the cookie consent code for CCPA and GDPR compliance.  Note that if you disable cookie consent, you should also either disable, or modify, the privacy policy.'),
-        (5000,'main',NULL,NULL,'Global configuration settings that affect how and what stats are collected and how users interact with your stats website.','General','none',1,NULL,NULL,NULL),
+        (5000,'main',NULL,NULL,'Global configuration settings that affect how and what stats are collected and how users interact with your stats website.<br><span class=\"small\"><b>NOTE:</b>  If you are getting the message that stats have already been updated when you know they have not\, the \"<b>Reset Last Update Time</b>\" button will reset the last update time and allow you to update your stats.</span>','General','none',1,NULL,NULL,NULL),
         (5001,'main','awards',NULL,'Settings that affect how often awards are calculated. To create or edit actual awards go to the <a href=\"awards.php\">awards list</a>.','Awards','none',1,NULL,NULL,NULL),
         (5002,'main','email',NULL,'Configuration settings for email notifications. To test your email settings go to <a href=\"email_test.php\">Test Email Notifications</a>.','Email','none',1,NULL,NULL,NULL),
         (5005,'main','errlog',NULL,'Settings to change how error logging is performed and maintained.','Error Logs','none',1,NULL,NULL,NULL),
