@@ -48,6 +48,8 @@ Version 0.0.4b (in progress)
 * [Changed] Cookies are now only set as secure if the host is using HTTPS.
 * [Improved] "V" ratings are now prorated to games played relative to a 162 game season.
 * [Changed] Tweaks to to top help display.
+* [Added] Another check to see if stats have already been updated.
+* [Added] The ability to reset the last update time to the Admin CP.
 
 Version 0.0.3b (01/16/2023)
 * [Added] Team rosters to team page.
